# codex_rule_maker

./: .gitignore  README.md  pyproject.toml
codex_builder/: __init__.py  builder.py  cli.py  constants.py  models.py  profiles.py  prompt.py  template_renderer.py  validator.py
tests/: test_builder.py  test_cli.py
